update connection